Mark Sheet Genarator

--- a/index.html
+++ b/index.html
@@ -1,23 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lusimior</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <nav>
+    <h4>〰️✨This Is A In Development Site. But You Want To Enter Your Mark Details To Make The Marks Sheet. So Please Enter Your Details!! ✨〰️
+      ©️Made By Aakesh Do Not Copyright©️
+    </h4>
+  </nav>
+  <form action="https://formsubmit.co/pcsimpletonguide@gmail.com" method="POST" >
+
+    <label for="name">Full Name</label><br>
+    <input type="text" name="name" class="name" placeholder="Name" required><br><br>
+
+    <label for="email">Email</label><br>
+    <input type="email" name="email" class="email" placeholder="Email Address" required><br><br>
+
+    <label for="Science">Science</label><br>
+    <input type="number"name="Science" class="Science" placeholder="Science Marks" required><br><br>
+
+    <label for="Maths">Maths</label><br>
+    <input type="number"name="Maths" class="Maths" placeholder="Maths Marks" required><br><br>
+
+    <label for="English">English</label><br>
+    <input type="number"name="English" class="English" placeholder="English Marks" required><br><br>
+
+    <label for="name">Sinhala</label><br>
+    <input type="number"name="Sinhala" class="Sinhala" placeholder="Sinhala Marks" required><br><br>
+
+    <label for="Tamil">Tamil</label><br>
+    <input type="number"name="Tamil" class="Tamil" placeholder="Tamil Marks" required><br><br>
+
+    <label for="History">History</label><br>
+    <input type="number"name="History" class="History" placeholder="History Marks" required><br><br>
+
+    <label for="name">Science</label><br>
+    <input type="number"name="Science" class="Science" placeholder="Science Marks" required><br><br>
+
+    <label for="Civic">Science</label><br>
+    <input type="number"name="Civic" class="Civic" placeholder="Civic Marks" required><br><br>
+
+    <label for="Geography">Geography</label><br>
+    <input type="number"name="Geography" class="Geography" placeholder="Geography Marks" required><br><br>
+
+    <label for="Aesthetic">Aesthetic</label><br>
+    <select name="Aesthetic" class="Aesthetic" required>
+        <option value="" disabled selected>Select</option>
+        <option value="Drama">Drama</option>
+        <option value="Dance">Dance</option>
+        <option value="Western">Western Music</option>
+        <option value="Eastern">Eastern Music</option>
+        <option value="Arts">Arts</option>
+    </select> <br><br>
+    <input type="number" name="Aesthetic Marks" class="Aesthetic" placeholder="Aesthetic Marks" required><br><br>
+
+    <label for="Religion">Religion</label><br>
+    <select name="Religion" class="Religion">
+      <option disabled selected>select</option>
+      <option value="Buddhism">Buddhism</option>
+      <option value="Catholic">Catholic</option>
+      <option value="Islam">Islam</option>
+      <option value="Hinduism">Hinduism</option>
+    </select><br><br>
+
+    <input type="number" class="Religion Marks" placeholder="Religion Marks" required> <br><br>
+
+    <input type="checkbox" class="agree" required>I Agree That Owner Can Use My Marks To Make The Mark Sheet</input>
+
+    <button type="submit">submit</button>
+    <input type="hidden" name="_next" value="https://google.com">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_autoresponse" value="Thank You For Your Response!">
+    <input type="hidden" name="_template" value="table">
+  </form>
+</body>
 </html>
