--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <input type="number" class="Religion Marks" placeholder="Religion Marks" required> <br><br>
 
-    <input type="checkbox" class="agree" required>I Agree That Owner Can Use My Marks To Make The Mark Sheet</input>
+    <input type="checkbox" class="agree" required>💫I Agree That Owner Can Use My Marks To Make The Mark Sheet💫</input><br><br>
 
     <button type="submit">submit</button>
     <input type="hidden" name="_next" value="https://google.com">
